fix: forces scrollbars

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -44,6 +44,7 @@ html {
   font-family: var(--font-family-sans-serif);
   font-weight: 300;
   letter-spacing: var(--letter-spacing-base);
+  overflow: scroll;
 }
 
 html,
